--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,13 @@
 body {
     font-family: 'Montserrat', sans-serif;
     color: #696969;
+    background: url(../img/fondo.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
+
+
 
 .navbar {
     background-color: #ffffff;
@@ -213,8 +219,9 @@ body {
     top: 45%;
     max-width: 3em;
     height: 3em;
-    background-color: #000;
+    background-color: #959595;
     border-radius: 100%;
+    border: 1px solid #fff;
     
 }
 
