--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 .banner {
-    background: url(../img/019.jpg);
+    background: url(../img/019-1.png);
     min-height: 100vh;
     background-size: cover;
     background-position: center;
