--- a/css/style.css
+++ b/css/style.css
@@ -58,10 +58,12 @@ body {
 }
 
 .perfil img {
-    max-width: 400px;
+    max-width: 80%;
     height: auto;
-    border-radius: 100%;
+    border-radius: 50%;
 }
+
+
 
 .progress {
     width: 100%;
