--- a/css/style.css
+++ b/css/style.css
@@ -57,10 +57,21 @@ body {
     margin-top: 15rem;
 }
 
-.perfil img {
-    max-width: 80%;
-    height: auto;
+.perfil {
+    width: 300px;
+    height: 300px;
     border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    background-color: white;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.perfil img {
+    max-width: 100%;
+    height: auto;
 }
 
 .descripcion {
@@ -113,6 +124,11 @@ body {
     justify-content: center;
     
 }
+
+.tituloSeccion p {
+    text-align: center;
+}
+
 .border {
     position: absolute;
     background: #FF7700;
@@ -133,11 +149,25 @@ body {
 .experiencia {
     position: relative;
 }
-.experiencia img {
-    max-width: 200px;
-    height: auto;
+
+.experiencia .containerImg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100px;
+    overflow: hidden;
+    margin-bottom: 1rem;
 }
 
+.experiencia img {
+    width: auto;
+    max-height: 100%;
+}
+
+.jop-description h5.subTitulo {
+    font-size: 1.2rem !important;
+}
 
 .btnVermas{
     position: absolute; 
@@ -153,7 +183,6 @@ body {
     border-radius: 50%;
     width: 50px;
     height: 50px;
-    /*transition: .3s ease all;*/
 }
 
 .cardExperiencias{
@@ -238,126 +267,15 @@ body {
    left: -5%;
 }
 
-
-/* FORMULARIO */
-
-.formulario {
-    display: grid;
-    gap: 10px;
+.habilidades ul li {
+    font-size: 1.25rem;
 }
 
-.formulario__label {
-    display: block;
-    font-weight: 700;
-    cursor: pointer;
-    margin-bottom: 5px;
-}
-
-.formulario__grupo-input {
-    position: relative;
-}
-
-.formulario__input {
-    width: 100%;
-    background: #fff;
-    border: 3px solid transparent;
-    border-radius: 3px;
-    height: 40px;
-    line-height: 40px;
-    padding: 0 40px 0 10px;
-    transition: .3s ease all;
-}
-
-.formulario__input:focus {
-    border: 3px solid#0075ff;
-    outline: none;
-    box-shadow: 3px 0 30px rgba(163, 163, 163, 0.4);
-}
-
-.formulario__input-error {
-    font-size: 12px;
-    margin-bottom: 0;
-    display: none;
-}
-
-.formulario__input-error-activo {
-    display: inline-block;
-}
-
-.formulario__validacion-estado {
-    position: absolute;
-    right: 10px;
-    bottom: 12px;
-    z-index: 100;
-    color: red;
-    font-size: 18px;
-    opacity: 0;
-}
-
-.formulario__mensaje {
-    width: auto;
-    height: auto;
-    background-color: #f66060;
-    padding: 10px 0;
-    border-radius: 3px;
-    color: #000;
-    margin:auto;
-    margin-top: 20px;
-    display: none;
-}
-
-.formulario__mensaje-activo {
-    display: flex;
-    vertical-align: center;
-    justify-content: center;
-    text-align: center;
-}
-
-.formulario__grupo-btn-enviar {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.formulario__btn {
-    width: 30%;
-    margin-top: 20px;
-    font-weight: 700;
-    transition: .1s ease all;
-}
-
-.formulario__btn:hover {
-    box-shadow: 3px 0 30px rgba(163, 163, 163, 0.4);
-}
-
-.formulario__mensaje-exito {
-    font-size: 20px;
-    margin-top: 20px;
-    display: none;
-}
-
-.formulario__mensaje-exito-activo {
-    display: block;
-}
-
-
-/*------------- ESTILOS PARA VALIDACION -----------*/
-
-.formulario__grupo-correcto .formulario__validacion-estado {
-    color: #1ed12d;
-    opacity: 1;
-}
-
-.formulario__grupo-incorrecto .formulario__label {
-    color: #bb2929;
-    opacity: 1;
-}
-
-.formulario__grupo-incorrecto .formulario__validacion-estado {
-    color: #bb2929;
-    opacity: 1;
-}
-
-.formulario__grupo-incorrecto .formulario__input {
-    border: 3px solid #bb2929;
+@media screen and (max-width: 568px)  {
+    .carousel-control-next {
+        left: 85%;
+     }
+     .carousel-control-prev {
+        left: 2%;
+     }
 }
